Update logIn view UI

--- a/lang/ar-EG.json
+++ b/lang/ar-EG.json
@@ -1,5 +1,6 @@
 {
     "Sign_Up" : "تسجيل الدخول",
+    "Log_In" : "تسجيل الدخول",
     "title" : "تطبيق المتجر",
     "products" : "منتجاتنا",
     "offers" : "أفضل العروض",
@@ -7,7 +8,8 @@
     "return" : "العودة للوراء",
     "change_lang" : "تغيير اللغة",
     "switch" : "التبديل بين العربية و الانجليزية",
-    "success" : "تم تسجيل الحساب بنجاح!",
+    "sign_up_success" : "تم تسجيل الحساب بنجاح!",
+    "log_in_success" : "تم تسجيل الدخول بنجاح!",
     "enter" : "الدخول الى التطبيق",
     "submit" : "التسجيل"
 }
